feat(portfolio): enhance daily snapshot calculations and improve performance chart rendering